bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: '(' expected but identifier found.
if litMessage()=='R'
   ^BDR:3: error: '(' expected but identifier found.
if litMessage()=='A'
   ^